--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ logo: /images/IMG_0077.JPG
 github:
   project_1_URL: https://github.com/samzshi0529/A-Machine-Learning-Approach-for-US-Mortgage-Risk-Analysis
   project_2_URL: https://github.com/samzshi0529/HanziNLP
+  Linkedin_URL: www.linkedin.com/in/zhanshisamuel
