--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ logo: /images/IMG_0077.JPG
 github:
   project_1_URL: https://github.com/samzshi0529/A-Machine-Learning-Approach-for-US-Mortgage-Risk-Analysis
   project_2_URL: https://github.com/samzshi0529/HanziNLP
+  project_3_URL: https://github.com/samzshi0529/Simple-Stock-Analysis-Dashboard
   Linkedin_URL: https://www.linkedin.com/in/zhanshisamuel/
