--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ github:
   project_2_URL: https://github.com/samzshi0529/HanziNLP
   project_3_URL: https://github.com/samzshi0529/Simple-Stock-Analysis-Dashboard
   Linkedin_URL: https://www.linkedin.com/in/zhanshisamuel/
+  project_4_URL: Files/Advanced  Stock  Price  Prediction  Via  Ensemble.pdf
