--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,6 @@ github:
   project_3_URL: https://github.com/samzshi0529/Simple-Stock-Analysis-Dashboard
   Linkedin_URL: https://www.linkedin.com/in/zhanshisamuel/
   project_4_URL: Files/Advanced  Stock  Price  Prediction  Via  Ensemble.pdf
+  Bloomberg: https://www.bloomberg.com/company/careers/working-here/global-data/
+  Deloitte: https://www2.deloitte.com/ch/en/pages/strategy-operations/solutions/analytics-and-cognitive.html
+  Ipsos: https://www.ipsos.com/en-cn
