--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: [Zhan (Sam) Shi]
 description: [Personal Website]
-logo: /images/Portrait.jpg
+logo: /images/DSCF0018.JPG
 github:
   project_1_URL: https://github.com/samzshi0529/A-Machine-Learning-Approach-for-US-Mortgage-Risk-Analysis
   project_2_URL: https://github.com/samzshi0529/HanziNLP
